# cimagehash

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
app/: CMakeLists.txt  bench_ocv.cpp  bench_this.cpp  gpttest.cpp  main.cpp
cmake/: dependencies.cmake  helper.cmake  options.cmake
include/imghash/: typedef.h
include/imghash/average_hash/: consts.hpp
include/imghash/average_hash/avx2/: const.hpp  helper.hpp  impl.hpp
include/imghash/average_hash/generic/: impl.hpp
include/imghash/helper/: ceval_math.hpp  consts.hpp  structs.hpp  typedefs.h
include/imghash/helper/avx2/: func.hpp  structs.hpp  types.hpp
include/imghash/helper/common/: cfunc.hpp  consts.hpp  macros.h  timer.hpp  types.hpp
include/imghash/helper/generic/: structs.hpp
test/: CMakeLists.txt  test_simd.cpp
